Try to get nested helpers to work

--- a/app/assets/javascripts/templates/examples.hbs
+++ b/app/assets/javascripts/templates/examples.hbs
@@ -15,14 +15,7 @@
       </ul>
     </div>
     <div class="span9">
-
-    <section id="home">
-      <div class="page-header">
-        <h1>Ember Bootstrap Rails Examples</h1>
-      </div>
-
-    </section>
-
+      {{ outlet }}
     </div>
   </div>
 </div>
