--- a/app/assets/javascripts/templates/example.hbs
+++ b/app/assets/javascripts/templates/example.hbs
@@ -1,1 +1,8 @@
-<h1>Bootstrap Example {{title}} Demo</h1>
+<section id="home">
+  <div class="page-header">
+    <h1>{{name}}</h1>
+  </div>
+
+  {{h1 contentBinding='name'}}
+  {{header contentBinding="name"}}
+</section>
