--- a/app/assets/javascripts/templates/example.hbs
+++ b/app/assets/javascripts/templates/example.hbs
@@ -1,1 +1,6 @@
-<h1>Bootstrap Example {{title}} Demo</h1>
+<section id="example-{{id}}">
+  <div class="page-header">
+    <h1>{{name}}</h1>
+  </div>
+
+</section>
