--- a/app/assets/javascripts/templates/examples.hbs
+++ b/app/assets/javascripts/templates/examples.hbs
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="span3 bs-docs-sidebar">
       {{view Bootstrap.NavList classNames="bs-docs-sidenav"
-        contentBinding="controller" itemValueKey="id"}}
+             contentBinding="controller"}}
     </div>
     <div class="span9">
       {{ outlet }}
