--- a/app/assets/javascripts/templates/navigation.hbs
+++ b/app/assets/javascripts/templates/navigation.hbs
@@ -1,15 +1,12 @@
 <section id="navigation">
   <div class="page-header">
     <h1>Nav: tabs, pills, and lists</h1>
+    <p>There is 3 types of navigation helper, <strong>Bootstrap.Tabs</strong>, <strong>Bootstrap.Pills</strong> and <strong>Bootstrap.NavList</strong> see below various way to use them.</p>
   </div>
-  <p>All nav components here—tabs, pills, and lists— <strong>share the same controller</strong>.</p>
-  <h3>With Controller</h3>
-  <p>A minimal controller could look like:</p>
-  <pre class="prettyprint linenums">App.NavigationController = Ember.ObjectController.extend
-  selections: ['Alpha', 'Beta', 'Gamma']
-  selection: 'Alpha'</pre>
 
-  {{partial 'tabs'}}
-  {{partial 'pills'}}
-  {{partial 'lists'}}
+  {{outlet static}}
+  {{outlet stackable}}
+  {{outlet static_custom_links}}
+  {{outlet objects}}
+  {{outlet objects_custom}}
 </section>
