--- a/app/assets/javascripts/templates/navigation/objects_custom.hbs
+++ b/app/assets/javascripts/templates/navigation/objects_custom.hbs
@@ -3,14 +3,10 @@
 <pre class="prettyprint linenums">App.NavigationObject.FIXTURES = [
   { id:  1
   name:   'Name 1'
-  title:  'Nav 1',
-  link:   'nav-1',
   mylink: 'mynav-1'},
   { id:  2
-  name:   'Name 2',
-  title:  'Nav 2',
-  link:   'nav-2',
-  mynav:  'mynav-2'}
+  name:   'Name 2'
+  mylink:  'mynav-2'}
 ]</pre>
 <h6>Controller</h6>
 <pre class="prettyprint linenums">App.NavigationObjectsController = Ember.ArrayController.extend()</pre>
