--- a/app/assets/javascripts/templates/navigation/static_custom_links.hbs
+++ b/app/assets/javascripts/templates/navigation/static_custom_links.hbs
@@ -2,8 +2,8 @@
 <h6>Controller</h6>
 <pre class="prettyprint linenums">App.NavigationStaticCustomLinksController = Ember.ObjectController.extend
   selections: [
-    {title: 'Alpha', link: 'link-a'},
-    {title: 'Beta',  link: 'link-b'},
+    {title: 'Alpha', link: 'link-a'}
+    {title: 'Beta',  link: 'link-b'}
     {title: 'Gamma', link: 'link-g'}
   ]
   selection: 'Alpha'</pre>
